[package]
name = "smartmail"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]

[dependencies]
serde_json = "1.0"
dotenv = "0.10"
rumqtt = "0.10"
data-encoding = "2.0.0-rc.2"
byteorder = "1.1"
log = "0.4"
env_logger = "0.5"
lazy_static = "1.0"
threema-gateway = "0.7"

[profile.release]
lto = true
