[package]
name = "smartmail"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]

[dependencies]
byteorder = "1.1"
data-encoding = "2.0.0-rc.2"
dotenv = "0.10"
env_logger = "0.5"
lazy_static = "1.0"
log = "0.4"
mqtt3 = { git = "https://github.com/tekjar/mqtt3" }
reqwest = "0.7"
rumqtt = { git = "https://github.com/AtherEnergy/rumqtt.git", branch = "tokio2" }
serde_json = "1.0"
threema-gateway = "0.7"

[profile.release]
lto = true
